Fix text baseline alignment in save widget

--- a/notebook/static/notebook/less/savewidget.less
+++ b/notebook/static/notebook/less/savewidget.less
@@ -1,12 +1,13 @@
 span.save_widget {
-    margin-top: 6px;
-    max-width: 100%;
+    margin-top: 4px;
     display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    width: calc(~"100% - 210px");
     
     span.filename {
         height: 1em;
         line-height: 1em;
-        padding: 3px;
         margin-left: @padding-large-horizontal;
         border: none;
         font-size: 146.5%;
